# Forge

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  SKILL.md  launch_codra.ps1  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tailwind.config.js
apps/desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Sidebar.tsx  Toaster.tsx
apps/desktop/src/components/views/: BrowserView.tsx  DeployView.tsx  ExecutorView.tsx  PlanView.tsx  SettingsView.tsx  VerifierView.tsx  WelcomeView.tsx
apps/desktop/src/context/: NotificationContext.tsx
crates/codra-browser/: Cargo.toml
crates/codra-browser/src/: lib.rs  managed.rs
crates/codra-cli/: Cargo.toml
crates/codra-cli/src/: main.rs
crates/codra-core/: Cargo.toml
crates/codra-core/src/: config.rs  deploy.rs  executor.rs  lib.rs  planner.rs  prompts.rs  provider.rs  provider_config.rs  repair.rs  services.rs  verifier.rs
crates/codra-deploy/: Cargo.toml
crates/codra-deploy/src/: lib.rs
crates/codra-memory/: Cargo.toml
crates/codra-protocol/: Cargo.toml
crates/codra-protocol/src/: lib.rs
crates/codra-tools/: Cargo.toml
crates/codra-tools/src/: computer_use.rs  design.rs  fs.rs  git.rs  lib.rs  registry.rs  search.rs  terminal.rs
crates/forge-browser/: Cargo.toml
crates/forge-browser/src/: lib.rs  managed.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: deploy.rs  executor.rs  lib.rs  planner.rs  prompts.rs  provider.rs  provider_config.rs  repair.rs  services.rs  verifier.rs
crates/forge-deploy/: Cargo.toml
crates/forge-memory/: Cargo.toml
crates/forge-memory/src/: lib.rs
crates/forge-protocol/: Cargo.toml
crates/forge-protocol/src/: lib.rs
crates/forge-tools/: Cargo.toml
crates/forge-tools/src/: fs.rs  git.rs  lib.rs  search.rs  terminal.rs
demo/: README.md  codra-demo-video-20260424-162535.webm  codra-demo-video.html
docs/: ARCHITECTURE.md  PLAN.md
docs/design-md/: INTEGRATION.md
scripts/: render-codra-demo-video.cjs
