[package]
name = "forge-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-protocol = { path = "../forge-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
headless_chrome = { workspace = true }
base64 = { workspace = true }
uuid = { version = "1.7", features = ["v4"] }
chrono = { workspace = true }
