[package]
name = "forge-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
forge-protocol = { path = "../forge-protocol" }
ignore = "0.4"
regex = "1.10"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
chrono = "0.4"
