[package]
name = "desktop"
version = "0.1.0"
description = "Forge Desktop Shell"
authors = ["Forge Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
forge-core = { path = "../../../crates/forge-core" }
forge-protocol = { path = "../../../crates/forge-protocol" }
forge-tools = { path = "../../../crates/forge-tools" }
forge-browser = { path = "../../../crates/forge-browser" }
tokio = { workspace = true }
