[package]
name = "desktop"
version = "0.1.0"
description = "Codra Desktop Shell"
authors = ["Codra Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
codra-core = { path = "../../../crates/codra-core" }
codra-protocol = { path = "../../../crates/codra-protocol" }
codra-tools = { path = "../../../crates/codra-tools" }
codra-browser = { path = "../../../crates/codra-browser" }
tokio = { workspace = true }
